<resources>
    <string name="app_name">Prolific Library</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete_all">Delete All</string>
    <string name="empty_view_text">No Library books downloaded!</string>

    <string name="list_screen_title">Books</string>
    <string name="list_fetch_error">Error fetching books!</string>
    <string name="list_delete_error">Error deleting all library books!</string>

    <string name="detail_screen_title">Detail</string>
    <string name="detail_checkout_text">Last Checked Out: %1$s @ %2$s</string>
    <string name="detail_categories_text">Tags: %1$s</string>
    <string name="detail_publisher_text">Publisher: %1$s</string>
    <string name="detail_no_name">N/A</string>
    <string name="detail_no_date">N/A</string>
    <string name="detail_no_category">None</string>
    <string name="detail_no_publisher">None</string>
    <string name="detail_checkout_button">Checkout</string>
    <string name="detail_checkout_dialog_cancel">Cancel</string>
    <string name="detail_checkout_dialog_confirm">Checkout</string>
    <string name="detail_checkout_dialog_title">Checkout Book</string>
    <string name="detail_checkout_dialog_name">Name</string>
    <string name="detail_error_checkout">Error checking out book!</string>
    <string name="detail_checkout_success">Successfully checked out book!</string>
    <string name="detail_error_delete">Error deleting book!</string>
    <string name="detail_menu_share">Share</string>
    <string name="detail_menu_delete">Delete</string>
    <string name="detail_menu_edit">Edit</string>

    <string name="add_screen_title">Add Book</string>
    <string name="add_screen_title_edit">Edit Book</string>
    <string name="add_book_title">Book Title</string>
    <string name="add_book_author">Author</string>
    <string name="add_book_publisher">Publisher</string>
    <string name="add_book_categories">Categories</string>
    <string name="add_submit_error">Error submitting book!</string>
    <string name="add_exit_dialog_title">Leave Screen?</string>
    <string name="add_exit_dialog_content">You will lose any text you input! Are you sure you want to go back?</string>
    <string name="add_exit_dialog_back">Go Back</string>
    <string name="add_exit_dialog_stay">Stay</string>
    <string name="add_button_submit">Submit</string>


</resources>
